--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 Hello World<p>
 
-<a href="https://github.com/iditabad/pentest_stuff">This is probably my best thing so far. </url>
+<a href="https://github.com/iditabad/pentest_stuff">This is probably my best thing so far. </a>
